--- a/index.html
+++ b/index.html
@@ -1,1 +1,38 @@
-hello
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <title>Matt Arklan | Mechatronics Engineer</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+<header>
+  <h1>Matt Arklan</h1>
+  <p>Mechatronics Engineer | Power Electronics | Embedded Systems</p>
+</header>
+
+<section>
+  <h2>Projects</h2>
+
+  <div class="project">
+    <h3>Totem-Pole PFC Converter</h3>
+    <p><strong>Problem:</strong> High efficiency AC-DC conversion.</p>
+    <p><strong>My Role:</strong> HF leg current sensing design, gate drive layout, firmware control loop tuning.</p>
+  </div>
+
+  <div class="project">
+    <h3>Motor Control System</h3>
+    <p><strong>Problem:</strong> Closed-loop speed control with encoder feedback.</p>
+    <p><strong>My Role:</strong> PWM generation, current limiting, fault handling.</p>
+  </div>
+
+</section>
+
+<section>
+  <h2>Contact</h2>
+  <p>Email: your@email.com</p>
+</section>
+
+</body>
+</html>
