--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ h2 {
 </section>
 
 </div>
-<a href="test.html">test page</a>
+<a href="https://mattarklan.github.io/Projects/test.html">test page</a>
   
 </body>
 </html>
